--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "prebuild": "tsc",
     "build": "babel src --out-dir build --ignore 'src/**/*.d.ts' --extensions '.ts'",
-		"test": "jest"
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
@@ -27,6 +27,11 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.12.1"
+    "@babel/polyfill": "^7.12.1",
+    "apollo-server": "^2.22.2",
+    "bcrypt": "^5.0.1",
+    "dotenv": "^8.2.0",
+    "graphql": "^15.5.0",
+    "sequelize": "^6.6.2"
   }
 }
