--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "scripts": {
     "prebuild": "tsc",
-    "build": "babel src --out-dir build --ignore 'src/**/*.d.ts' --extensions '.ts'",
+    "build": "babel src --out-dir build --ignore 'src/**/*.d.ts, tests' --extensions '.ts'",
     "test": "jest"
   },
   "devDependencies": {
@@ -15,6 +15,7 @@
     "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-typescript": "^7.13.0",
+    "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.22",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
