--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "scripts": {
     "prebuild": "tsc",
-    "build": "babel src --out-dir build --ignore 'src/**/*.d.ts, tests' --extensions '.ts'",
+    "build": "babel src --out-dir build --ignore 'src/**/*.d.ts, tests/**' --extensions '.ts'",
     "test": "jest"
   },
   "devDependencies": {
@@ -33,6 +33,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "graphql": "^15.5.0",
+    "pg": "^8.5.1",
     "sequelize": "^6.6.2"
   }
 }
