--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -37,6 +37,7 @@
     // "allowUmdGlobalAccess": true,                /* Allow accessing UMD globals from modules. */
 
 		"skipLibCheck": true,                           /* Skip type checking of declaration files. */
-    "forceConsistentCasingInFileNames": true        /* Disallow inconsistently-cased references to the same file. */
-  }
+    "forceConsistentCasingInFileNames": true,        /* Disallow inconsistently-cased references to the same file. */
+	},
+	"exclude": ["**/*.spec.ts"]
 }
