--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "graphql": "^15.5.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "sequelize": "^6.6.2"
   }
