--- a/server/package.json
+++ b/server/package.json
@@ -26,15 +26,21 @@
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.5.4",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "apollo-server": "^2.22.2",
     "bcrypt": "^5.0.1",
+    "class-validator": "^0.13.1",
     "dotenv": "^8.2.0",
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
-    "sequelize": "^6.6.2"
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.6.2",
+    "type-graphql": "^1.1.1"
   }
 }
