--- a/server/package.json
+++ b/server/package.json
@@ -6,21 +6,16 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "prebuild": "tsc",
-    "build": "babel src --out-dir build --ignore 'src/**/*.d.ts, tests/**' --extensions '.ts'",
-    "test": "jest"
+    "build": "tsc",
+    "test": "jest",
+    "dev": "ts-node src/index.ts"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.14",
-    "@babel/core": "^7.13.14",
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-typescript": "^7.13.0",
     "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
-    "babel-jest": "^26.6.3",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -31,7 +26,6 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
     "apollo-server": "^2.22.2",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
