--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,14 +1,15 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "es2020",
+    "module": "commonjs",
     "declaration": true,
     "declarationMap": true,
 		"lib": ["es2020", "esnext.asynciterable"],
-    "emitDeclarationOnly": true,
-		"emitDecoratorMetadata": true,
+    // "emitDeclarationOnly": true,
 		"experimentalDecorators": true,
+		"emitDecoratorMetadata": true,
     "isolatedModules": true,
+		"outDir": "./build",
 
     "strict": true,                                 /* Enable all strict type-checking options. */
     // "noImplicitAny": true,                       /* Raise error on expressions and declarations with an implied 'any' type. */
@@ -43,5 +44,5 @@
     "forceConsistentCasingInFileNames": true,        /* Disallow inconsistently-cased references to the same file. */
 
 	},
-	"exclude": ["**/*.spec.ts"]
+	"exclude": ["**/*.spec.ts", "./build"]
 }
