--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.23.0",
