--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/uuid": "^8.3.0",
@@ -28,10 +29,13 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "apollo-server": "^2.22.2",
+    "apollo-server-express": "^2.23.0",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
