--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -44,5 +44,5 @@
     "forceConsistentCasingInFileNames": true,        /* Disallow inconsistently-cased references to the same file. */
 
 	},
-	"exclude": ["**/*.spec.ts", "./build"]
+	"exclude": ["./build"]
 }
