--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "dev": "ts-node src/index.ts"
+    "dev": "nodemon --watch 'src/**' --ext 'ts,json' --exec ts-node src/index.ts"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
@@ -24,6 +24,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "faker": "^5.5.3",
     "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.4",
     "ts-mockito": "^2.6.1",
