--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,13 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "mitt": "^2.1.0",
+    "quill": "^1.3.7",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@types/quill": "^2.0.7",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
