--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,13 @@
     "core-js": "^3.6.5",
     "mitt": "^2.1.0",
     "quill": "^1.3.7",
+    "quill-delta": "^4.2.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
-    "@types/quill": "^2.0.7",
+    "@types/quill": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
